syntax = "proto3";

package order_proto;

option go_package = "english-ai-full/quanqr/proto_qr/order";

import "google/protobuf/timestamp.proto";

// Main Order message
message Order {
  int64 id = 1;
  int64 guest_id = 2;
  int64 user_id = 3;
  bool is_guest = 4;
  int64 table_number = 5;
  int64 order_handler_id = 6;
  string status = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
  int32 total_price = 10;
  repeated DishOrderItem dish_items = 11;
  repeated SetOrderItem set_items = 12;
  string topping = 13;
  string tracking_order = 14;
  bool take_away = 15;
  int64 chili_number = 16;
  string table_token = 17;
  string order_name = 18;
  int32 version = 19;               // Added to track order versions
  int64 parent_order_id = 20;       // Added to track original order
}

// Order items with modification tracking
message DishOrderItem {
  int64 id = 1;                     // Added primary key
  int64 dish_id = 2;
  int64 quantity = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  string order_name = 6;
  string modification_type = 7;      // Track if item was initial or added later
  int32 modification_number = 8;     // Track which modification this was part of
}

message SetOrderItem {
  int64 id = 1;                     // Added primary key
  int64 set_id = 2;
  int64 quantity = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  string order_name = 6;
  string modification_type = 7;      // Track if item was initial or added later
  int32 modification_number = 8;     // Track which modification this was part of
}

// New message for order modifications
message OrderModification {
  int64 id = 1;
  int64 order_id = 2;
  int32 modification_number = 3;
  string modification_type = 4;
  google.protobuf.Timestamp modified_at = 5;
  int64 modified_by_user_id = 6;
  string order_name = 7;
}



// Detailed order items (keeping existing structure)
message OrderDetailedDish {
  int64 dish_id = 1;
  int64 quantity = 2;
  string name = 3;
  int32 price = 4;
  string description = 5;
  string image = 6;
  string status = 7;
}

message OrderSetDetailed {
  int64 id = 1;
  string name = 2;
  string description = 3;
  repeated OrderDetailedDish dishes = 4;
  int32 user_id = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
  bool is_favourite = 8;
  repeated int64 like_by = 9;
  bool is_public = 10;
  string image = 11;
  int32 price = 12;
  int64 quantity = 13;
}

// Updated CreateOrderRequest with new fields
message CreateOrderRequest {
  int64 guest_id = 1;
  int64 user_id = 2;
  bool is_guest = 3;
  int64 table_number = 4;
  int64 order_handler_id = 5;
  string status = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  int32 total_price = 9;
  repeated DishOrderItem dish_items = 10;
  repeated SetOrderItem set_items = 11;
  string topping = 12;
  string tracking_order = 13;
  bool take_away = 15;
  int64 chili_number = 16;
  string table_token = 17;
  string order_name = 18;
  int32 version = 19;
  int64 parent_order_id = 20;
}

// Updated UpdateOrderRequest with new fields
message UpdateOrderRequest {
  int64 id = 1;
  int64 guest_id = 2;
  int64 user_id = 3;
  int64 table_number = 4;
  int64 order_handler_id = 5;
  string status = 6;
  int32 total_price = 7;
  repeated DishOrderItem dish_items = 8;
  repeated SetOrderItem set_items = 9;
  bool is_guest = 10;
  string topping = 11;
  string tracking_order = 12;
  bool take_away = 15;
  int64 chili_number = 16;
  string table_token = 17;
  string order_name = 18;
  int32 version = 19;
  int64 parent_order_id = 20;
}

message PayOrdersRequest {
  oneof identifier {
    int64 guest_id = 1;
    int64 user_id = 2;
  }
}

// Parameters
message OrderIdParam {
  int64 id = 1;
}

message OrderDetailIdParam {
  int64 id = 1;
}

// Responses
message OrderResponse {
  Order data = 1;
}


message GetOrdersRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message OrderListResponse {
  repeated Order data = 1;
  PaginationInfo pagination = 2;
}

message PaginationInfo {
  int32 current_page = 1;
  int32 total_pages = 2;
  int64 total_items = 3;
  int32 page_size = 4;
}

message FetchOrdersByCriteriaRequest {
  repeated int64 order_ids = 1;
  string order_name = 2;
  google.protobuf.Timestamp start_date = 3;
  google.protobuf.Timestamp end_date = 4;
  int32 page = 5;
  int32 page_size = 6;
}




//  adding data start
// Represents a summary of items in a specific order version
message OrderVersionSummary {
  int32 version_number = 1;                // The version number of this summary
  int32 total_dishes_count = 2;            // Total number of dishes in this version
  int32 total_sets_count = 3;              // Total number of sets in this version
  int32 version_total_price = 4;           // Total price for this version
  string modification_type = 5;            // Type of modification (INITIAL, ADD, REMOVE, etc.)
  google.protobuf.Timestamp modified_at = 6; // When this version was created
  repeated OrderItemChange changes = 7;     // Details of what changed in this version
}

// Represents changes made in a specific version
message OrderItemChange {
  string item_type = 1;        // Whether it's a "DISH" or "SET"
  int64 item_id = 2;          // ID of the dish or set
  string item_name = 3;       // Name of the dish or set
  int32 quantity_changed = 4; // Positive for additions, negative for removals
  int32 price = 5;           // Price of this item
}

// Modified OrderDetailedResponse to include version summaries
message OrderDetailedResponse {
  int64 id = 1;
  int64 guest_id = 2;
  int64 user_id = 3;
  int64 table_number = 4;
  int64 order_handler_id = 5;
  string status = 6;
  int32 total_price = 7;
  repeated OrderSetDetailed data_set = 8;
  repeated OrderDetailedDish data_dish = 9;
  bool is_guest = 10;
  string topping = 11;
  string tracking_order = 12;
  bool take_away = 15;
  int64 chili_number = 16;
  string table_token = 17;
  string order_name = 18;
  int32 current_version = 19;           // Renamed from version to be more clear
  int64 parent_order_id = 20;
  
   // New fields for version tracking and summaries
  repeated OrderVersionSummary version_history = 21;  // History of all versions
  OrderTotalSummary total_summary = 22;             // Overall summary across all versions
}

// Represents the total summary across all versions
message OrderTotalSummary {
  int32 total_versions = 1;              // Total number of versions
  int32 total_dishes_ordered = 2;        // Total dishes across all versions
  int32 total_sets_ordered = 3;          // Total sets across all versions
  int32 cumulative_total_price = 4;      // Sum of all version prices
  repeated OrderItemCount most_ordered_items = 5; // Top ordered items across versions
}

// Helper message for tracking most ordered items
message OrderItemCount {
  string item_type = 1;    // "DISH" or "SET"
  int64 item_id = 2;
  string item_name = 3;
  int32 total_quantity = 4;
}

message OrderDetailedListResponse {
  repeated OrderDetailedResponse data = 1;
  PaginationInfo pagination = 2;
}
//adding data end

// New message for dish deliveries

message DishDelivery {
  int64 id = 1;
  int64 order_id = 2;
  string order_name = 3;
  int64 guest_id = 4;
  int64 user_id = 5;
  int64 table_number = 6;
  repeated DishOrderItem dish_items = 7;
  int32 quantity_delivered = 8;
  string delivery_status = 9;
  google.protobuf.Timestamp delivered_at = 10;
  int64 delivered_by_user_id = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;

  bool is_guest = 16;
}
message CreateDishDeliveryRequest {
 
  int64 order_id = 2;
  string order_name = 3;
  int64 guest_id = 4;
  int64 user_id = 5;
  int64 table_number = 6;
  repeated DishOrderItem dish_items = 7;
  int32 quantity_delivered = 8;
  string delivery_status = 9;
  google.protobuf.Timestamp delivered_at = 10;
  int64 delivered_by_user_id = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;

  bool is_guest = 16;
}
enum DeliveryStatus {
  PENDING = 0;
  PARTIALLY_DELIVERED = 1;
  FULLY_DELIVERED = 2;
  CANCELLED = 3;
}

message OrderDetailedResponseWithDelivery {
  int64 id = 1;
  int64 guest_id = 2;
  int64 user_id = 3;
  int64 table_number = 4;
  int64 order_handler_id = 5;
  string status = 6;
  int32 total_price = 7;
  repeated OrderSetDetailed data_set = 8;
  repeated OrderDetailedDish data_dish = 9;
  bool is_guest = 10;
  string topping = 11;
  string tracking_order = 12;
  bool take_away = 15;
  int64 chili_number = 16;
  string table_token = 17;
  string order_name = 18;
  int32 current_version = 19;
  int64 parent_order_id = 20;
  
  repeated OrderVersionSummary version_history = 21;
  OrderTotalSummary total_summary = 22;

  // New delivery-related fields
  repeated DishDelivery delivery_history = 23;     // Complete delivery log
  DeliveryStatus current_delivery_status = 24;     // Overall delivery status
  int32 total_items_delivered = 25;                // Total items delivered
  google.protobuf.Timestamp last_delivery_at = 26; // Most recent delivery timestamp
}
// Service definition with new methods for modifications and deliveries
service OrderService {
  rpc FetchOrdersByCriteria(FetchOrdersByCriteriaRequest) returns (OrderDetailedListResponse);
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  rpc GetOrders(GetOrdersRequest) returns (OrderListResponse);
  rpc GetOrderDetail(OrderIdParam) returns (OrderResponse);
  rpc UpdateOrder(UpdateOrderRequest) returns (OrderDetailedListResponse);
  rpc AddingSetsDishesOrder(UpdateOrderRequest) returns (OrderDetailedListResponse);

  rpc RemovingSetsDishesOrder(UpdateOrderRequest) returns (OrderDetailedListResponse);
  rpc MarkDishesDelivered(CreateDishDeliveryRequest) returns (OrderDetailedResponseWithDelivery);
  rpc PayOrders(PayOrdersRequest) returns (OrderListResponse);
  rpc GetOrderProtoListDetail(GetOrdersRequest) returns (OrderDetailedListResponse);
}


